# ShowGlass

./: .gitignore  Dockerfile  README.md  app.js  docker-compose.build.yml  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
