[package]
name = "showglass"
version = "1.0.0"
description = "Showglass — App Store screenshot studio"
authors = ["Showglass"]
edition = "2021"

[lib]
name = "showglass_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
